tests/error/arg_prim_ref.gw
// [contains] primitive types cannot be used as reference
function void test(int @i){}
